[releng] add docgen addon
Change-Id: I044472e520a47eb8d330caed135b078b6943138c
Signed-off-by: Thomas Guiu <thomas.guiu@soyatec.com>