@@ -79,11 +79,17 @@ This file was generated by Eclipse EGF
     <condition property="capella.egf.repo.url" value="${env.capella.egf.repo.url}">
         <isset property="env.capella.egf.repo.url" />
     </condition>
+    <condition property="docgen.addon.location" value="${env.docgen.addon.location}">
+        <isset property="env.docgen.addon.location" />
+    </condition>
     <condition property="eclipse_version" value="${env.eclipse_version}">
         <isset property="env.eclipse_version" />
     </condition>
     <condition property="studio_version" value="${env.studio_version}">
         <isset property="env.studio_version" />
+    </condition>
+    <condition property="docgen.addon_version" value="${env.docgen.addon_version}">
+        <isset property="env.docgen.addon_version" />
     </condition>
 
     <property file="build.properties" />
@@ -144,8 +150,10 @@ This file was generated by Eclipse EGF
 	                <jvmarg value="-Dkitalpha.repo.url=${kitalpha.repo.url}"/>
 	                <jvmarg value="-Dcapella.repo.url=${capella.repo.url}"/>
 	                <jvmarg value="-Dcapella.egf.repo.url=${capella.egf.repo.url}"/>
+	                <jvmarg value="-Ddocgen.addon.location=${docgen.addon.location}"/>
 	                <jvmarg value="-Declipse_version=${eclipse_version}"/>
 	                <jvmarg value="-Dstudio_version=${studio_version}"/>
+	                <jvmarg value="-Ddocgen.addon_version=${docgen.addon_version}"/>
                     <arg value="-data" />
                     <arg value="@{workspace}" />
                 <args />
@@ -333,8 +341,10 @@ This file was generated by Eclipse EGF
 		<echo message="Provided $${kitalpha.repo.url} : ${kitalpha.repo.url}" />
 		<echo message="Provided $${capella.repo.url} : ${capella.repo.url}" />
 		<echo message="Provided $${capella.egf.repo.url} : ${capella.egf.repo.url}" />
+		<echo message="Provided $${docgen.addon.location} : ${docgen.addon.location}" />
 		<echo message="Provided $${eclipse_version} : ${eclipse_version}" />
 		<echo message="Provided $${studio_version} : ${studio_version}" />
+		<echo message="Provided $${docgen.addon_version} : ${docgen.addon_version}" />
 	</target>
 
     <target name="init.build.properties">
@@ -359,12 +369,14 @@ This file was generated by Eclipse EGF
 	
 	<target name="all" depends="CleanStep_1,TP_juno,TP_build,releng,PublishStep_5,releng_feature,product,PublishStep_8,product_feature,extension_sdk,PublishStep_11,extension_sdk_feature,vpdsl,PublishStep_14,vpdsl_feature,AntStep_16,all_studio_features,TP_win32-win32-x86,AntStep_19" />
 	<target name="TP_juno" depends="TP_juno_build_studio_platform" />
-	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features" />
+	<target name="TP_juno_build_studio_platform" depends="TP_juno_build_studio_platform_setup_platform,TP_juno_build_studio_platform_install_query_legacy_features,TP_juno_build_studio_platform_install_kitalpha_features,TP_juno_build_studio_platform_install_capella_features,TP_juno_build_studio_platform_install_capella_egf_features,TP_juno_build_studio_platform_install_docgen_addon" />
 	<target name="TP_juno_build_studio_platform_setup_platform" depends="TP_juno_build_studio_platform_setup_platform_TP_juno,TP_juno_build_studio_platform_setup_platform_install_cots_features,TP_juno_build_studio_platform_setup_platform_install_diffmerge,TP_juno_build_studio_platform_setup_platform_install_ecoretools2" />
+	<target name="TP_juno_build_studio_platform_install_docgen_addon" depends="TP_juno_build_studio_platform_install_docgen_addon_AntStep_1,TP_juno_build_studio_platform_install_docgen_addon_UnzipStep_2,TP_juno_build_studio_platform_install_docgen_addon_install_docgen_addon_features" />
 	<target name="TP_build" depends="TP_build_TP_build,TP_build_install_egf_TP_build,TP_build_install_kitalpha_releng_TP_build" />
 	<target name="TP_win32-win32-x86" depends="TP_win32-win32-x86_build_studio_platform,TP_win32-win32-x86_install_studio,TP_win32-win32-x86_EgfStep_3,TP_win32-win32-x86_zip_juno_results" />
-	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features,TP_win32-win32-x86_build_studio_platform_install_capella_egf_features" />
+	<target name="TP_win32-win32-x86_build_studio_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform,TP_win32-win32-x86_build_studio_platform_install_query_legacy_features,TP_win32-win32-x86_build_studio_platform_install_kitalpha_features,TP_win32-win32-x86_build_studio_platform_install_capella_features,TP_win32-win32-x86_build_studio_platform_install_capella_egf_features,TP_win32-win32-x86_build_studio_platform_install_docgen_addon" />
 	<target name="TP_win32-win32-x86_build_studio_platform_setup_platform" depends="TP_win32-win32-x86_build_studio_platform_setup_platform_TP_win32-win32-x86,TP_win32-win32-x86_build_studio_platform_setup_platform_install_cots_features,TP_win32-win32-x86_build_studio_platform_setup_platform_install_diffmerge,TP_win32-win32-x86_build_studio_platform_setup_platform_install_ecoretools2" />
+	<target name="TP_win32-win32-x86_build_studio_platform_install_docgen_addon" depends="TP_win32-win32-x86_build_studio_platform_install_docgen_addon_AntStep_1,TP_win32-win32-x86_build_studio_platform_install_docgen_addon_UnzipStep_2,TP_win32-win32-x86_build_studio_platform_install_docgen_addon_install_docgen_addon_features" />
 	<target name="CleanStep_1" >
 		<antcall target="clean.result" />
 	</target>
@@ -633,6 +645,23 @@ This file was generated by Eclipse EGF
 	</target>
 
 
+	<target name="TP_juno_build_studio_platform_install_docgen_addon_AntStep_1">
+		<antcall target="Download docgen addon_TP_juno"/>
+	</target>
+
+<target name="Download docgen addon_TP_juno">
+	<get 
+        	src="${docgen.addon.location}/buildTimestamp?format=yyyy-MM-dd_HH-mm-ss" 
+                dest="${docgenAddon}.ts"/>
+        <loadfile srcfile="${docgenAddon}.ts" property="docgenAddonTS"/>
+        <echo>Docgen addon timestamp: ${docgenAddonTS}</echo>
+
+        <get 
+                src="${docgen.addon.location}/artifact/result/publish/CapellaXHTMLDocGen-updateSite-${docgen.addon_version}.${docgenAddonTS}-incubation.zip" 
+                dest="${result}/docgenAddon.zip"/>     
+</target> 
+
+
 	<target name="AntStep_16">
 		<antcall target="move_egf_to_tools2"/>
 	</target>
@@ -641,6 +670,23 @@ This file was generated by Eclipse EGF
 	<delete dir="${tools}/egf"/>
 	<move file="${publish}/TP_build" tofile="${tools}/egf" />
 </target>
+
+
+	<target name="TP_win32-win32-x86_build_studio_platform_install_docgen_addon_AntStep_1">
+		<antcall target="Download docgen addon_TP_win32-win32-x86"/>
+	</target>
+
+<target name="Download docgen addon_TP_win32-win32-x86">
+	<get 
+        	src="${docgen.addon.location}/buildTimestamp?format=yyyy-MM-dd_HH-mm-ss" 
+                dest="${docgenAddon}.ts"/>
+        <loadfile srcfile="${docgenAddon}.ts" property="docgenAddonTS"/>
+        <echo>Docgen addon timestamp: ${docgenAddonTS}</echo>
+
+        <get 
+                src="${docgen.addon.location}/artifact/result/publish/CapellaXHTMLDocGen-updateSite-${docgen.addon_version}.${docgenAddonTS}-incubation.zip" 
+                dest="${result}/docgenAddon.zip"/>     
+</target> 
 
 
 	<target name="AntStep_19">
@@ -771,6 +817,10 @@ This file was generated by Eclipse EGF
                 <arg value="-i" />
                 <arg value="org.eclipse.xtext.sdk.feature.group" />
                 <arg value="-i" />
+                <arg value="org.eclipse.xsd.sdk.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.emf.validation.ocl.feature.group" />
+                <arg value="-i" />
                 <arg value="org.eclipse.sirius.doc.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.runtime.ide.eef.feature.group" />
@@ -809,9 +859,7 @@ This file was generated by Eclipse EGF
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.specifier.ide.ui.source.feature.group" />
                 <arg value="-i" />
-                <arg value="org.eclipse.sirius.runtime.acceleo.source.feature.group" />
-                <arg value="-i" />
-                <arg value="org.eclipse.emf.validation.ocl.feature.group" />                
+                <arg value="org.eclipse.sirius.runtime.acceleo.source.feature.group" />                
 
 
 
@@ -1178,6 +1226,44 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_juno_build_studio_platform_install_docgen_addon_install_docgen_addon_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_juno" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="file:/${result}/docgenAddon.p2" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.docgen.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.docgen.feature.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_build_TP_build" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -1475,6 +1561,10 @@ This file was generated by Eclipse EGF
                 <arg value="-i" />
                 <arg value="org.eclipse.xtext.sdk.feature.group" />
                 <arg value="-i" />
+                <arg value="org.eclipse.xsd.sdk.feature.group" />
+                <arg value="-i" />
+                <arg value="org.eclipse.emf.validation.ocl.feature.group" />
+                <arg value="-i" />
                 <arg value="org.eclipse.sirius.doc.feature.feature.group" />
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.runtime.ide.eef.feature.group" />
@@ -1513,9 +1603,7 @@ This file was generated by Eclipse EGF
                 <arg value="-i" />
                 <arg value="org.eclipse.sirius.specifier.ide.ui.source.feature.group" />
                 <arg value="-i" />
-                <arg value="org.eclipse.sirius.runtime.acceleo.source.feature.group" />
-                <arg value="-i" />
-                <arg value="org.eclipse.emf.validation.ocl.feature.group" />                
+                <arg value="org.eclipse.sirius.runtime.acceleo.source.feature.group" />                
 
 
 
@@ -1882,6 +1970,44 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_win32-win32-x86_build_studio_platform_install_docgen_addon_install_docgen_addon_features" depends="init,install.director" >
+        <eclipse.launch app="director">
+            <args>
+                <jvmarg value="-Declipse.p2.mirrors=false" />
+                    <jvmarg value="-Xmx1024m"/>
+                    <jvmarg value="-XX:MaxPermSize=256m"/>
+
+
+            	<arg value="-roaming" />
+            	<arg value="-profileProperties" />
+                <arg value="org.eclipse.update.install.features=true " />
+
+                <arg value="-d" />
+                <arg value="${publish}/TP_win32-win32-x86" />
+                
+                <arg value="-p" />
+                <arg value="SDKProfile" />
+
+                <arg value="-r" />
+                <arg value="file:/${result}/docgenAddon.p2" />
+
+
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.docgen.source.feature.feature.group" />
+                <arg value="-i" />
+                <arg value="org.polarsys.capella.docgen.feature.feature.group" />                
+
+
+
+                <arg value="-p2.os" />
+                <arg value="win32" />
+                <arg value="-p2.ws" />
+                <arg value="win32" />
+                <arg value="-p2.arch" />
+                <arg value="x86" />
+            </args>
+        </eclipse.launch>
+	</target>	
 	<target name="TP_win32-win32-x86_install_studio" depends="init,install.director" >
         <eclipse.launch app="director">
             <args>
@@ -1932,6 +2058,16 @@ This file was generated by Eclipse EGF
             </args>
         </eclipse.launch>
 	</target>	
+	<target name="TP_juno_build_studio_platform_install_docgen_addon_UnzipStep_2" depends="init">
+		<unzip src="${result}/docgenAddon.zip" dest="${result}/docgenAddon.p2"  >
+		</unzip>
+	</target>
+
+	<target name="TP_win32-win32-x86_build_studio_platform_install_docgen_addon_UnzipStep_2" depends="init">
+		<unzip src="${result}/docgenAddon.zip" dest="${result}/docgenAddon.p2"  >
+		</unzip>
+	</target>
+
 	<target name="TP_win32-win32-x86_zip_juno_results" depends="init">
 		<zip destfile="${publish}/capella_studio-${studio_version}-${timestamp}-win32-win32-x86-${eclipse_version}-incubation.zip" basedir="${publish}/TP_win32-win32-x86"  >
 
